tests/NormalTests/paczka1/fuzzy1/42804137.err
Error in line 10: aV4y1ZdCmbr A407 61,4
Error in line 14: aV4y1ZdCmbr S421 69,0
Error in line 16: aV4y1ZdCmbr A232 97,0
Error in line 29: kfd3fb22 A396 53,0
Error in line 36: N4vi¦ A396 3,7
Error in line 35: ham6cZ A396 21,5
Error in line 33: N4viQ S421 4,9
